--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -40,7 +40,7 @@
             </aside>
 
             <main class="animate-appear with-sidebar"> 
-                <form action="save-orphanage" method="post">
+                <form action="save-orphanage" method="post" onsubmit="validate(event)">
                     <fieldset>
                         <legend>Dados</legend>
 
@@ -75,7 +75,7 @@
                             <label for="images">Fotos</label>
                             <div class="images-upload" id="images">
                                 <div class="new-upload">
-                                    <input name="images" placeholder="Cole o link da foto aqui" required type="url" />
+                                    <input name="images" placeholder="Cole o link da foto aqui" required type="url"/>
                                     <span onclick="deleteField(event)">
                                         <img src="/images/remove-file.svg" alt="Remover Foto" />
                                     </span>
